fixed description, reviews overflowing text display, review delete button sizing

--- a/frontend/src/components/GetSingleSpot/GetSingleSpot.css
+++ b/frontend/src/components/GetSingleSpot/GetSingleSpot.css
@@ -20,3 +20,11 @@
 .singleSpotAddress {
     padding-top: 10px;
 }
+
+.description {
+    display: inline-block;
+    word-break: break-word;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis
+}
